--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -110,9 +110,9 @@ jobs:
             - export IMG_NAME=$(shipctl get_resource_version_key $IMG_OUT "sourceName")
             - export DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
             - export DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
-            - sudo docker build -t=$IMG_NAME:$REL_VER --pull .
-            - sudo docker login -u $DH_USR_NAME -p $DH_PASS
-            - sudo docker push $IMG_NAME:$REL_VER
+            - docker build -t=$IMG_NAME:$REL_VER --pull .
+            - docker login -u $DH_USR_NAME -p $DH_PASS
+            - docker push $IMG_NAME:$REL_VER
       - OUT: c7_dd_img
     on_success:
       script:
@@ -141,9 +141,9 @@ jobs:
             - DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
             - DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
             - pushd $(shipctl get_resource_state "$RES_REPO")
-            - sudo docker build -t=$IMG_NAME:$REL_VER --pull .
-            - sudo docker login -u $DH_USR_NAME -p $DH_PASS
-            - sudo docker push $IMG_NAME:$REL_VER
+            - docker build -t=$IMG_NAME:$REL_VER --pull .
+            - docker login -u $DH_USR_NAME -p $DH_PASS
+            - docker push $IMG_NAME:$REL_VER
       - OUT: c7all_dd_img
     on_success:
       script:
@@ -172,9 +172,9 @@ jobs:
             - DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
             - DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
             - pushd $(shipctl get_resource_state "$RES_REPO")
-            - sudo docker build -t=$IMG_NAME:$REL_VER --pull .
-            - sudo docker login -u $DH_USR_NAME -p $DH_PASS
-            - sudo docker push $IMG_NAME:$REL_VER
+            - docker build -t=$IMG_NAME:$REL_VER --pull .
+            - docker login -u $DH_USR_NAME -p $DH_PASS
+            - docker push $IMG_NAME:$REL_VER
       - OUT: c7nodall_dd_img
     on_success:
       script:
@@ -203,9 +203,9 @@ jobs:
             - DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
             - DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
             - pushd $(shipctl get_resource_state "$RES_REPO")
-            - sudo docker build -t=$IMG_NAME:$REL_VER --pull .
-            - sudo docker login -u $DH_USR_NAME -p $DH_PASS
-            - sudo docker push $IMG_NAME:$REL_VER
+            - docker build -t=$IMG_NAME:$REL_VER --pull .
+            - docker login -u $DH_USR_NAME -p $DH_PASS
+            - docker push $IMG_NAME:$REL_VER
       - OUT: c7pytall_dd_img
     on_success:
       script:
@@ -234,9 +234,9 @@ jobs:
             - DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
             - DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
             - pushd $(shipctl get_resource_state "$RES_REPO")
-            - sudo docker build -t=$IMG_NAME:$REL_VER --pull .
-            - sudo docker login -u $DH_USR_NAME -p $DH_PASS
-            - sudo docker push $IMG_NAME:$REL_VER
+            - docker build -t=$IMG_NAME:$REL_VER --pull .
+            - docker login -u $DH_USR_NAME -p $DH_PASS
+            - docker push $IMG_NAME:$REL_VER
       - OUT: c7javall_dd_img
     on_success:
       script:
@@ -265,9 +265,9 @@ jobs:
             - DH_USR_NAME=$(shipctl get_integration_resource_field $IMG_OUT "userName")
             - DH_PASS=$(shipctl get_integration_resource_field $IMG_OUT "password")
             - pushd $(shipctl get_resource_state "$RES_REPO")
-            - sudo docker build -t=$IMG_NAME:$REL_VER --pull .
-            - sudo docker login -u $DH_USR_NAME -p $DH_PASS
-            - sudo docker push $IMG_NAME:$REL_VER
+            - docker build -t=$IMG_NAME:$REL_VER --pull .
+            - docker login -u $DH_USR_NAME -p $DH_PASS
+            - docker push $IMG_NAME:$REL_VER
       - OUT: c7cppall_dd_img
     on_success:
       script:
