adding aarch64 images

--- a/images/x86_64/CentOS_7/shippable.yml
+++ b/images/x86_64/CentOS_7/shippable.yml
@@ -94,6 +94,8 @@ jobs:
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
+    runtime:
+      nodePool: x86_c07_cus_01
     steps:
       - IN: c7_dd_repo
       - TASK:
@@ -123,6 +125,8 @@ jobs:
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
+    runtime:
+      nodePool: x86_c07_cus_01
     steps:
       - IN: c7all_dd_repo
       - IN: c7_dd_img
@@ -154,6 +158,8 @@ jobs:
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
+    runtime:
+      nodePool: x86_c07_cus_01
     steps:
       - IN: c7nodall_dd_repo
       - IN: c7all_dd_img
@@ -185,6 +191,8 @@ jobs:
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
+    runtime:
+      nodePool: x86_c07_cus_01
     steps:
       - IN: c7pytall_dd_repo
       - IN: c7all_dd_img
@@ -216,6 +224,8 @@ jobs:
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
+    runtime:
+      nodePool: x86_c07_cus_01
     steps:
       - IN: c7javall_dd_repo
       - IN: c7all_dd_img
@@ -247,6 +257,8 @@ jobs:
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
+    runtime:
+      nodePool: x86_c07_cus_01
     steps:
       - IN: c7cppall_dd_repo
       - IN: c7all_dd_img
