--- a/images/WindowsServer_2016/shippable.yml
+++ b/images/WindowsServer_2016/shippable.yml
@@ -60,14 +60,18 @@ jobs:
                 - IMG_OUT: "w16"
                 - RES_REPO: "w16_repo"
           script:
-            - REPO_COMMIT=$(shipctl get_resource_version_key "$RES_REPO" "shaData.commitSha")
-            - IMG_NAME=$(shipctl get_resource_version_key "$IMG_OUT" "sourceName")
-            - DH_USR_NAME=$(shipctl get_integration_resource_field "$IMG_OUT" "userName")
-            - DH_PASS=$(shipctl get_integration_resource_field "$IMG_OUT" "password")
-            - pushd $(shipctl get_resource_state "$RES_REPO")
-            - docker build -t=$IMG_NAME:$REL_VER --pull .
-            - docker login -u $DH_USR_NAME -p $DH_PASS
-            - docker push $IMG_NAME:$REL_VER
+            - $script:RES_REPO = "${CONTEXT}_repo"
+            - echo $RES_REPO
+            - echo ${IMG_OUT}
+
+#            - REPO_COMMIT=$(shipctl get_resource_version_key "$RES_REPO" "shaData.commitSha")
+#            - IMG_NAME=$(shipctl get_resource_version_key "$IMG_OUT" "sourceName")
+#            - DH_USR_NAME=$(shipctl get_integration_resource_field "$IMG_OUT" "userName")
+#            - DH_PASS=$(shipctl get_integration_resource_field "$IMG_OUT" "password")
+#            - pushd $(shipctl get_resource_state "$RES_REPO")
+#            - docker build -t=$IMG_NAME:$REL_VER --pull .
+#            - docker login -u $DH_USR_NAME -p $DH_PASS
+#            - docker push $IMG_NAME:$REL_VER
       - OUT: w16_img
 #    on_success:
 #      script:
