--- a/images/WindowsServer_2016/shippable.yml
+++ b/images/WindowsServer_2016/shippable.yml
@@ -60,11 +60,8 @@ jobs:
                 - IMG_OUT: "w16"
                 - RES_REPO: "w16_repo"
           script:
-            - $script:RES_REPO = "${CONTEXT}_repo"
-            - echo $RES_REPO
-            - echo ${IMG_OUT}
-
-#            - REPO_COMMIT=$(shipctl get_resource_version_key "$RES_REPO" "shaData.commitSha")
+            - $REPO_COMMIT=$(shipctl get_resource_version_key "$env:RES_REPO" "shaData.commitSha")
+            - echo $REPO_COMMIT
 #            - IMG_NAME=$(shipctl get_resource_version_key "$IMG_OUT" "sourceName")
 #            - DH_USR_NAME=$(shipctl get_integration_resource_field "$IMG_OUT" "userName")
 #            - DH_PASS=$(shipctl get_integration_resource_field "$IMG_OUT" "password")
